# AgenticRAG

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  ingest.py  main.py  pyproject.toml  requirements.txt  vlm_model.py
.github/workflows/: main.yml
backend/api/: dependencies.py  main.py  schemas.py
backend/db/: database.py  models.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/settings/: page.tsx
frontend/components/: ChatMessage.tsx  SourceCard.tsx
frontend/components/ui/: ai-prompt-box.tsx  aurora-background.tsx  bolt-style-chat.tsx
frontend/lib/: api.ts
monitoring/: eval_ragas.py  langfuse_eval.py  llm_as_judge.py
qdrant_storage/: raft_state.json
src/core/: config.py  exception.py  utils.py
src/data/: chunker.py  data_ingestion.py
src/entity/: artifact_entity.py
src/generation/: llm_client.py  prompts.py
src/indexing/: embedder.py  vector_store.py
src/retrieval/: keyword_search.py  reranker.py  semantic_search.py
