[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agenticrag"
version = "0.1.0"
description = "Hybrid RAG system — semantic + BM25 + RRF with Langfuse monitoring"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "backend*", "monitoring*"]

# ─────────────────────────────────────────
# pytest
# ─────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["test"]
asyncio_mode = "auto"
addopts = "--cov=src --cov=backend --cov-report=term-missing -q"

# ─────────────────────────────────────────
# Coverage
# ─────────────────────────────────────────
[tool.coverage.run]
source = ["src", "backend", "monitoring"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 60

# ─────────────────────────────────────────
# Ruff — linting + formatting
# ─────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src", "backend", "monitoring"]

# ─────────────────────────────────────────
# Mypy — type checking
# ─────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false
exclude = ["tests/", ".venv/"]
